[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/ui/menu/InventoryPanel.gd" type="Script" id=1]
[ext_resource path="res://tres/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/ui/icons/pickaxe.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/icons/icon_attack.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/icons/item_hard_drive.png" type="Texture" id=5]
[ext_resource path="res://scenes/ui/menu/TabStatus.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/ui/menu/TabItems.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 1 )

[node name="InventoryPanel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 8 )
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Close" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="HBox" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -307.5
margin_top = -203.0
margin_right = 307.5
margin_bottom = 203.0
mouse_filter = 2

[node name="Tabs" type="TabContainer" parent="HBox"]
margin_right = 547.0
margin_bottom = 406.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 5 )
tabs_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabStatus" parent="HBox/Tabs" instance=ExtResource( 6 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TabItems" parent="HBox/Tabs" instance=ExtResource( 7 )]
visible = false
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TabButtons" type="VBoxContainer" parent="HBox"]
margin_left = 551.0
margin_right = 615.0
margin_bottom = 406.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status" type="Button" parent="HBox/TabButtons"]
margin_right = 64.0
margin_bottom = 135.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 3
custom_styles/normal = SubResource( 7 )
toggle_mode = true
pressed = true
icon = ExtResource( 5 )
expand_icon = true

[node name="Items" type="Button" parent="HBox/TabButtons"]
margin_top = 135.0
margin_right = 64.0
margin_bottom = 270.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 3
custom_styles/normal = SubResource( 7 )
toggle_mode = true
icon = ExtResource( 3 )
expand_icon = true

[node name="Achievements" type="Button" parent="HBox/TabButtons"]
margin_top = 270.0
margin_right = 64.0
margin_bottom = 406.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 3
custom_styles/normal = SubResource( 7 )
toggle_mode = true
icon = ExtResource( 4 )
expand_icon = true

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="HBox/TabButtons/Status" to="." method="_on_Guardians_pressed"]
[connection signal="pressed" from="HBox/TabButtons/Items" to="." method="_on_Items_pressed"]
[connection signal="pressed" from="HBox/TabButtons/Achievements" to="." method="_on_Achievements_pressed"]
